[project]
name = "score-based-channels"
version = "0.1.0"
description = "MIMO Channel Estimation using Score-Based (Diffusion) Generative Models"
readme = "README.md"
requires-python = "~=3.11.0"

dependencies = [
    "dotmap==1.3.30",
    "hdf5storage==0.1.19",
    "matplotlib==3.9.2",
    "numpy==1.26.3",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "torch==2.3.1",
    "tqdm==4.66.5",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
